--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
 
-
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <h1>Test</h1>
