--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <h1>Test</h1>
         <p>Dit is een test pagina</p>
         <p>test voor github</p>
-        <p>Test voor Youri</p>
+        <p>Test voor Youri 2</p>
     </body>
 </html>
