--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <p>Dit is een test pagina</p>
         <p>test voor github</p>
         <p>Test voor Youri 2</p>
-        <h1>teringzooi</h1>
+        <h1>test 2</h1>
     </body>
 </html>
