--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     </head>
     <body>
         <h1>Test</h1>
@@ -9,7 +9,8 @@
         <p>Test voor Youri 2</p>
         <h1>test 2</h1>
 
-<script type="text/javascript" scr="js/jquery-3.4.1.min.js"></script>
-<script type="text/javascript" scr="js/bootstrap.min.js"></script>
+        <script type="text/javascript" scr="js/jquery-3.4.1.min.js"></script>
+        <script type="text/javascript" scr="js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="js/myparcel.js"></script>
     </body>
 </html>
