--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
 
@@ -42,7 +43,9 @@
                   
 
         <h1>Gegevens</h1>
-        <div id="myparcel"></div>
+        <div id="myparcel">
+          
+        </div>
 
         <script type="text/javascript" scr="js/jquery-3.4.1.min.js"></script>
         <script type="text/javascript" scr="js/bootstrap.min.js"></script>
