--- a/index.html
+++ b/index.html
@@ -76,10 +76,7 @@
 
 
   <h1>Gegevens</h1>
-  <div>
-    <p id="name"></p>
-    <p id="address"></p>
-  </div>
+  <div id='myparcel'></div>
 
   <script type="text/javascript" scr="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" scr="js/bootstrap.min.js"></script>
