--- a/index.html
+++ b/index.html
@@ -78,7 +78,16 @@
 
   
   <h1>Gegevens</h1>
-  <div id='myparcel'></div>
+  <div id='myparcel'>
+    <table style='width: 100%;'>
+      <tr>
+        <th>Naam</th>
+        <th>Adres</th>
+        <th>E-mail</th>
+        <th>Telefoonnummer</th>
+      </tr>
+    </table>
+  </div>
 
   <script type="text/javascript" scr="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" scr="js/bootstrap.min.js"></script>
