--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     <table style='width: 100%;'>
       <tr>
         <th>Naam</th>
+        <th>Postcode</th>
         <th>Adres</th>
         <th>E-mail</th>
         <th>Telefoonnummer</th>
