--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   
   <h1>Gegevens</h1>
   <div id='myparcel'>
-    <table style='width: 100%;'>
+    <table id='zendingen' style='width: 100%;'>
       <tr>
         <th>Naam</th>
         <th>Postcode</th>
