--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         <th>Adres</th>
         <th>E-mail</th>
         <th>Telefoonnummer</th>
+        <th><a>Datum</a></th>
       </tr>
     </table>
   </div>
