--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
   <script type="text/javascript" scr="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" scr="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/myparcel.js"></script>
+  <script type="text/javascript" src="js/menu.js"></script>
 </body>
 
 </html>
