--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
         <th>Adres</th>
         <th>E-mail</th>
         <th>Telefoonnummer</th>
-        <th><a>Datum</a></th>
+        <th>Datum</th>
+        <th><a onclick="getMyParcelData()"><i class="fas fa-sync"></i></a></th>
       </tr>
     </table>
   </div>
