--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <!-- Sidebar  -->
     <nav id="sidebar">
       <div class="sidebar-header">
-        <h3>Bootstrap Sidebar</h3>
-        <strong>BS</strong>
+        <h3>Menu</h3>
+        <strong>Menu</strong>
       </div>
 
       <ul class="list-unstyled components">
         <li class="active">
-          <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+          <!-- <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
             <i class="fas fa-home"></i>
             Home
-          </a>
+          </a> -->
           <ul class="collapse list-unstyled" id="homeSubmenu">
             <li>
               <a href="#">Home 1</a>
