--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <th><a onclick='sortNaam()' class='sortBtn' id="naamButton">Naam</a></th>
                 <th>Postcode</th>
                 <th>Adres</th>
+                <th><a onclick="sortStad()" class="sortBtn" id="stadButton">Stad</a></th>
                 <th>E-mail</th>
                 <th>Telefoonnummer</th>
                 <th><a onclick="sortDatum()" class='sortBtn' id="datumButton">Datum</a></th>
