--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <th><a onclick="sortStad()" class='sortBtn' id='stadButton'>Adres</a></th>
                 <th>Contact</th>
                 <th><a onclick="sortDatum()" class='sortBtn' id="datumButton">Datum</a></th>
-                <th><a onclick="getMyParcelData()"><i class="fas fa-sync"></i></a>  <a onclick='getPDF(selectedParcels)'><i class="fas fa-print"></i></a></th>
+                <th><a class='reload' onclick="getMyParcelData()"><i class="fas fa-sync"></i></a>  <a onclick='getPDF(selectedParcels)'><i class="fas fa-print"></i></a></th>
               </tr>
             </table>
           </div>
