--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <th><span><a onclick='selectAllParcels()'><i id="selectAllIcon" class="fas fa-square checkmark"></i></a></span></th>
                 <th>Type</th>
                 <th>Status</th>
+                <th>Barcode</th>
                 <th><a onclick='sortNaam()' class='sortBtn' id="naamButton">Naam</a></th>
                 <th><a onclick="sortStad()" class='sortBtn' id='stadButton'>Adres</a></th>
                 <th>Contact</th>
