--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <table id='zendingen' style='width: 100%;'>
               <tr>
                 <th><span><a onclick='selectAllParcels()'><i id="selectAllIcon" class="fas fa-square checkmark"></i></a></span></th>
-                <th>Type</th>
-                <th>Status</th>
+                <th><a onclick='sortType()' class='sortBtn' id='typeButton'>Type</a></th>
+                <th><a onclick='sortStatus()' class='sortBtn' id='statusButton'>Status</a></th>
                 <th>Barcode</th>
                 <th><a onclick='sortNaam()' class='sortBtn' id="naamButton">Naam</a></th>
                 <th><a onclick="sortStad()" class='sortBtn' id='stadButton'>Adres</a></th>
