--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
       <div class="main_content">
           <div class="header">Klantgegevens</div>  
+          <input type='text' onkeyup="search()" id="searchBox" placeholder="Zoek een zending...">
 
           
 
