--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       <div class="sidebar">
         <a onclick='extendMenu()'><i class="fas fa-arrow-right"></i></a>
           <ul>
-              <li><span><i class="fas fa-home"></i><a href="#"> Home</a></span></li>
-              <li><i class="fas fa-user"></i><a href="#">Profile</a></li>
-              <li><i class="fas fa-address-card"></i><a href="#">About</a></li>
-              <li><i class="fas fa-project-diagram"></i><a href="#">portfolio</a></li>
-              <li><i class="fas fa-blog"></i><a href="#">Blogs</a></li>
-              <li><i class="fas fa-address-book"></i><a href="#">Contact</a></li>
-              <li><i class="fas fa-map-pin"></i><a href="#">Map</a></li>
+              <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
+              <li><a href="#"><i class="fas fa-user"></i>Profile</a></li>
+              <li><a href="#"><i class="fas fa-address-card"></i>About</a></li>
+              <li><a href="#"><i class="fas fa-project-diagram"></i>portfolio</a></li>
+              <li><a href="#"><i class="fas fa-blog"></i>Blogs</a></li>
+              <li><a href="#"><i class="fas fa-address-book"></i>Contact</a></li>
+              <li><a href="#"><i class="fas fa-map-pin"></i>Map</a></li>
           </ul> 
       </div>
 
