--- a/index.html
+++ b/index.html
@@ -12,22 +12,21 @@
 
   <div class="wrapper">
       <div class="sidebar">
-        <a onclick='extendMenu()'><i class="fas fa-arrow-right"></i></a>
-          <ul>
-              <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
-              <li><a href="#"><i class="fas fa-user"></i>Profile</a></li>
-              <li><a href="#"><i class="fas fa-address-card"></i>About</a></li>
-              <li><a href="#"><i class="fas fa-project-diagram"></i>portfolio</a></li>
-              <li><a href="#"><i class="fas fa-blog"></i>Blogs</a></li>
-              <li><a href="#"><i class="fas fa-address-book"></i>Contact</a></li>
-              <li><a href="#"><i class="fas fa-map-pin"></i>Map</a></li>
-          </ul> 
+        <a onclick='extendMenu()' class='extendButton'><i class="fas fa-arrow-right"></i></a>
+        <a href="#"><i class="fas fa-home"></i> Home</a>
+        <a href="#"><i class="fas fa-user"></i> Profile</a>
+        <a href="#"><i class="fas fa-address-card"></i> About</a>
+        <a href="#"><i class="fas fa-project-diagram"></i> portfolio</a>
+        <a href="#"><i class="fas fa-blog"></i> Blogs</a>
+        <a href="#"><i class="fas fa-address-book"></i> Contact</a>
+        <a href="#"><i class="fas fa-cog"></i> Instellingen</a>
       </div>
 
 
       <div class="main_content">
 
           <div class='filterContainer'>
+            <h3 class='filterLabel'>Filter: </h3>
             <div class='filter' id='statusFilter'>
               <li class='filterTitle'>Status</li>
               <ul class='filterList'>
