--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="sidebar">
         <a onclick='extendMenu()' class='extendButton'><i class="fas fa-arrow-right"></i></a>
         <a href="#"><i class="fas fa-home"></i> Home</a>
-        <a href="#"><i class="fas fa-user"></i> Profile</a>
+        <a href="#"><i class="fas fa-user"></i> Profiel</a>
         <a href="#"><i class="fas fa-address-card"></i> About</a>
         <a href="#"><i class="fas fa-project-diagram"></i> portfolio</a>
         <a href="#"><i class="fas fa-blog"></i> Blogs</a>
