--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
           <div id='myparcel'>
             <table id='zendingen'>
-              <tr>
+              <tr class='myParcelHeader'>
                 <th><span><a onclick='selectAllParcels()'><i id="selectAllIcon" class="fas fa-square checkmark"></i></a></span></th>
                 <th><a onclick='sortType()' class='sortBtn' id='typeButton'>Type</a></th>
                 <th><a onclick='sortStatus()' class='sortBtn' id='statusButton'>Status</a></th>
