--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a onclick='extendMenu()' class='extendButton'><i class="fas fa-arrow-right"></i></a>
         <a href="#"><i class="fas fa-home"></i> Home</a>
         <a href="#"><i class="fas fa-user"></i> Profiel</a>
-        <a href="#"><i class="fas fa-address-card"></i> About</a>
+        <a href='#'><i class="fas fa-rocket"></i> Lightspeed</a>
         <a href="#"><i class="fas fa-project-diagram"></i> portfolio</a>
         <a href="#"><i class="fas fa-blog"></i> Blogs</a>
         <a href="#"><i class="fas fa-address-book"></i> Contact</a>
@@ -60,6 +60,7 @@
                 <th><span><a onclick='selectAllParcels()'><i id="selectAllIcon" class="fas fa-square checkmark"></i></a></span></th>
                 <th><a onclick='sortType()' class='sortBtn' id='typeButton'>Type</a></th>
                 <th><a onclick='sortStatus()' class='sortBtn' id='statusButton'>Status</a></th>
+                <th>Kenmerk</th>
                 <th>Barcode</th>
                 <th><a onclick='sortNaam()' class='sortBtn' id="naamButton">Naam</a></th>
                 <th><a onclick="sortStad()" class='sortBtn' id='stadButton'>Adres</a></th>
