--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
   <div class="form">
     <form class="login-form">
       <img src="img/logo.png">
+      <input class="username" type="username" placeholder="Naam"/>
       <input class="password" type="password" placeholder="Wachtwoord"/>
       <button>Inloggen</button>
     </form>
