--- a/login.html
+++ b/login.html
@@ -9,7 +9,8 @@
   <div class="form">
     <form class="login-form">
       <img src="img/logo.png">
-      <input class="username" type="username" placeholder="Naam"/>
+      <input class="name" type="name" placeholder="Naam"/>
+      <input class="username" type="username" placeholder="Gebruikersnaam"/>
       <input class="password" type="password" placeholder="Wachtwoord"/>
       <button>Inloggen</button>
     </form>
