--- a/keys.html
+++ b/keys.html
@@ -9,6 +9,12 @@
   <div class="form">
     <form class="login-form">
       <img src="img/logo.png">
+      <h3>Inloggegevens</h3>
+      <input class="namecreate" type="name" placeholder="Naam"/>
+      <input class="usernamecreate" type="username" placeholder="Gebruikersnaam"/>
+      <input class="passwordcreate" type="password" placeholder="Wachtwoord"/>
+      <br>
+      <h3>API Keys</h3>
       <input class="myparcelkey"  type="myparcelkey" placeholder="MyParcel API Key"/>
       <input class="lightspeedkey" type="lightspeedkey" placeholder="Lightspeed API Key"/>
       <input class="lightspeedsecret" type="lightspeedsecret" placeholder="Lightspeed Secret"/>
