--- a/keys.html
+++ b/keys.html
@@ -18,7 +18,7 @@
       <input class="myparcelkey"  type="myparcelkey" placeholder="MyParcel API Key"/>
       <input class="lightspeedkey" type="lightspeedkey" placeholder="Lightspeed API Key"/>
       <input class="lightspeedsecret" type="lightspeedsecret" placeholder="Lightspeed Secret"/>
-      <button>Inloggen</button>
+      <button>Account aanmaken</button>
     </form>
   </div>
 </div>
