--- a/orders.html
+++ b/orders.html
@@ -14,7 +14,7 @@
       <div class="sidebar">
         <a onclick='extendMenu()' class='extendButton'><i class="fas fa-arrow-right"></i></a>
         <a href="index.html"><i class="fas fa-home"></i> Home</a>
-        <a href="orders.html"><i class="fas fa-box-open"></i> Orders</a>
+        <a href="home.html"><i class="fas fa-box-open"></i> Orders</a>
         <!-- <a href='#'><i class="fas fa-rocket"></i> Lightspeed</a>
         <a href="#"><i class="fas fa-project-diagram"></i> portfolio</a>
         <a href="#"><i class="fas fa-blog"></i> Blogs</a>
