--- a/index.html
+++ b/index.html
@@ -1,33 +1,29 @@
 <html>
  <head>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/login.css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/all.css">
  </head>
  <body>
+ <div class="login-page">
+  <div class="form">
+    <form class="login-form">
+      <img src="img/logo.png">
+      <input class="username" type="username" placeholder="Gebruikersnaam"/>
+      <input class="password" type="password" placeholder="Wachtwoord"/>
+      <button>Inloggen</button>
+    </form>
+  </div>
+</div>
 
-    <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
-
-    <div class="wrapper">
-        <div class="sidebar">
-            <a onclick='extendMenu()' class='extendButton'><i class="fas fa-arrow-right"></i></a>
-            <a href="index.html"><i class="fas fa-home"></i> Home</a>
-            <a href="orders.html"><i class="fas fa-box-open"></i> Orders</a>
-            <!-- <a href='#'><i class="fas fa-rocket"></i> Lightspeed</a>
-            <a href="#"><i class="fas fa-project-diagram"></i> portfolio</a>
-            <a href="#"><i class="fas fa-blog"></i> Blogs</a>
-            <a href="#"><i class="fas fa-address-book"></i> Contact</a> -->
-            <a href="settings.html"><i class="fas fa-cog"></i> Instellingen</a>
-          </div>
-
-            <div class="main_content">
-                <h1 style="margin-top: 2vw; text-align: center;">Welkom, [naam]!</h1>
-            </div>
-    </div>
+<script>
+  $('.message a').click(function(){
+   $('form').animate({height: "toggle", opacity: "toggle"}, "slow");
+});  
+</script>
 
 <script type="text/javascript" scr="js/jquery-3.4.1.min.js"></script>
 <script type="text/javascript" scr="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/menu.js"></script>
 
  </body>
 </html>
