--- a/keys.html
+++ b/keys.html
@@ -23,6 +23,15 @@
   </div>
 </div>
 
+<div id="popup1" class="overlay">
+	<div class="popup">
+		<h2>Uw account kan niet worden geregistreerd!</h2>
+		<a class="close" href="#">&times;</a>
+		<div class="content">
+		</div>
+	</div>
+</div>
+
 <script>
   $('.message a').click(function(){
    $('form').animate({height: "toggle", opacity: "toggle"}, "slow");
