--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 <script type="text/javascript" scr="js/jquery-3.4.1.min.js"></script>
 <script type="text/javascript" scr="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/account.js"></script>
 
  </body>
 </html>
