--- a/index.html
+++ b/index.html
@@ -9,18 +9,22 @@
   <div class="form">
     <form class="login-form">
       <img src="img/logo.png">
-      <input class="username" type="username" placeholder="Gebruikersnaam"/>
-      <input class="password" type="password" placeholder="Wachtwoord"/>
-      <button>Inloggen</button>
+      <input class="username" type="username" id="username" placeholder="Gebruikersnaam"/>
+      <input class="password" type="password" id="password" placeholder="Wachtwoord"/>
     </form>
+    <button onclick='login()'>Inloggen</button>
   </div>
 </div>
 
-<script>
-  $('.message a').click(function(){
-   $('form').animate({height: "toggle", opacity: "toggle"}, "slow");
-});  
-</script>
+<div id="popup1" class="overlay">
+	<div class="popup">
+    <h2>Uw account kan niet worden geregistreerd!</h2>
+    <p class='errormsg'></p>
+		<a class="close" onclick = 'document.getElementById("popup1").classList.remove("visible")'>&times;</a>
+		<div class="content">
+		</div>
+	</div>
+</div>
 
 <script type="text/javascript" scr="js/jquery-3.4.1.min.js"></script>
 <script type="text/javascript" scr="js/bootstrap.min.js"></script>
