--- a/home.html
+++ b/home.html
@@ -13,11 +13,8 @@
             <a onclick='extendMenu()' class='extendButton'><i class="fas fa-arrow-right"></i></a>
             <a href="home.html"><i class="fas fa-home"></i> Home</a>
             <a href="orders.html"><i class="fas fa-box-open"></i> Orders</a>
-            <!-- <a href='#'><i class="fas fa-rocket"></i> Lightspeed</a>
-            <a href="#"><i class="fas fa-project-diagram"></i> portfolio</a>
-            <a href="#"><i class="fas fa-blog"></i> Blogs</a>
-            <a href="#"><i class="fas fa-address-book"></i> Contact</a> -->
-            <a href="settings.html"><i class="fas fa-cog"></i> Instellingen</a>
+            <a href="settings.html" style='margin-top: auto;'><i class="fas fa-cog"></i> Instellingen</a>
+            <a href="index.html"><i class="fas fa-sign-out-alt"></i> Uitloggen</a>
           </div>
 
             <div class="main_content">
