--- a/home.html
+++ b/home.html
@@ -18,12 +18,13 @@
           </div>
 
             <div class="main_content">
-                <h1 style="margin-top: 2vw; text-align: center;">Welkom, [naam]!</h1>
+                <h1 id='welkom'style="margin-top: 2vw; text-align: center;">Welkom, [naam]!</h1>
             </div>
     </div>
 
 <script type="text/javascript" scr="js/jquery-3.4.1.min.js"></script>
 <script type="text/javascript" scr="js/bootstrap.min.js"></script>
+<script type='text/javascript' src='js/account.js'></script>
 <script type="text/javascript" src="js/menu.js"></script>
 
  </body>
