--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <div id="popup1" class="overlay">
 	<div class="popup">
-    <h2>Uw account kan niet worden geregistreerd!</h2>
+    <h2>Inloggen mislukt!</h2>
     <p class='errormsg'></p>
 		<a class="close" onclick = 'document.getElementById("popup1").classList.remove("visible")'>&times;</a>
 		<div class="content">
