--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
           </div>
 
             <div class="main_content">
-                <h1 id='welkom'style="margin-top: 2vw; text-align: center;">Welkom, [naam]!</h1>
+                <h1 id='welkom'style="margin-top: 2vw; text-align: center;"></h1>
             </div>
     </div>
 
