--- a/settings.html
+++ b/settings.html
@@ -16,6 +16,10 @@
             <a href="settings.html" style='margin-top: auto;'><i class="fas fa-cog"></i> Instellingen</a>
             <a href="index.html"><i class="fas fa-sign-out-alt"></i> Uitloggen</a>
           </div>
+
+          <div class="main_content">
+            <h1 style="margin-top: 2vw; text-align: center;">Instellingen</h1>
+        </div>
     </div>
 
 <script type="text/javascript" scr="js/jquery-3.4.1.min.js"></script>
