--- a/home.html
+++ b/home.html
@@ -18,7 +18,11 @@
           </div>
 
             <div class="main_content">
-                <h1 id='welkom'style="margin-top: 2vw; text-align: center;"></h1>
+                <div style="background: #9fda34;">
+                    <br>
+                <h1 id='welkom'style="text-align: center; color: white;"></h1>
+                <hr>
+                </div>
             </div>
     </div>
 
