--- a/settings.html
+++ b/settings.html
@@ -17,9 +17,13 @@
             <a href="index.html"><i class="fas fa-sign-out-alt"></i> Uitloggen</a>
           </div>
 
-          <div class="main_content">
-            <h1 style="margin-top: 2vw; text-align: center;">Instellingen</h1>
-        </div>
+           <div class="main_content">
+                <div style="background: #9fda34;">
+                    <br>
+                    <h1 style="text-align: center; color: white;">Instellingen</h1>
+                <hr>
+                </div>
+            </div>
     </div>
 
 <script type="text/javascript" scr="js/jquery-3.4.1.min.js"></script>
