--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 
     <div class="wrapper">
         <div class="sidebar">
-            <a onclick='extendMenu()' class='extendButton'><i class="fas fa-arrow-right"></i></a>
+            <a onclick='extendMenu()' class='extendButton' style='padding: 18px 0px;'><i class="fas fa-arrow-right"></i></a>
             <a href="home.html"><i class="fas fa-home"></i> Home</a>
             <a href="orders.html"><i class="fas fa-box-open"></i> Orders</a>
             <a href="settings.html" style='margin-top: auto;'><i class="fas fa-cog"></i> Instellingen</a>
