--- a/orders.html
+++ b/orders.html
@@ -12,7 +12,7 @@
 
   <div class="wrapper">
     <div class="sidebar">
-      <a onclick='extendMenu()' class='extendButton'><i class="fas fa-arrow-right"></i></a>
+  <a onclick='extendMenu()' class='extendButton' style='padding: 14px 0px;'><i class="fas fa-arrow-right"></i></a>
       <a href="home.html"><i class="fas fa-home"></i> Home</a>
       <a href="orders.html"><i class="fas fa-box-open"></i> Orders</a>
       <a href="settings.html" style='margin-top: auto;'><i class="fas fa-cog"></i> Instellingen</a>
