--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
   
 <div id="popuplogout" class="overlay">
 	<div class="popup" style="text-align: center;">
-    <h2>Account verwijderen</h2>
+    <h2>Uitloggen</h2>
     <p><b>Weet u zeker dat u wilt uitloggen?</b></p>
       <div style="display: flex;">
         <button class="ja" onclick = 'window.location.href="./index.html"' style="background: green; width: 50%; margin: 2%;">Ja</button>
