--- a/home.html
+++ b/home.html
@@ -32,9 +32,10 @@
           <br>
           <h3 style='text-align: center;'>Statistieken</h3>
           <hr>
-          <p style='padding: 1vw;'><i class="fas fa-coins"></i> Maandelijkse inkomsten (DATE): </p>
-          <p style='padding: 1vw;'><i class="fas fa-coins"></i> Jaarlijkse inkomsten (DATE): </p>
-          <p style='padding: 1vw;'><i class="fas fa-coins"></i> Totale inkomsten (DATE): </p>
+          <p style='padding: 1vw;' id='30days'><i class="fas fa-coins"></i> Maandelijkse inkomsten (DATE): </p>
+          <p style='padding: 1vw;' id='90days'><i class="fas fa-coins"></i> Jaarlijkse inkomsten (DATE): </p>
+          <p style='padding: 1vw;' id='year'><i class="fas fa-coins"></i> Totale inkomsten (DATE): </p>
+          <p style='padding: 1vw;' id='total'><i class="fas fa-coins"></i> Totale inkomsten (DATE): </p>
         </div>
 
         <div class="statistieken" style='background:#ebe7e7; width: 100%; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
@@ -68,6 +69,7 @@
   <script type="text/javascript" scr="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" scr="js/bootstrap.min.js"></script>
   <script type='text/javascript' src='js/account.js'></script>
+  <script type='text/javascript' src='js/home.js'></script>
   <script type="text/javascript" src="js/menu.js"></script>
 
 </body>
