--- a/home.html
+++ b/home.html
@@ -28,14 +28,14 @@
       </div>
 
       <div class="first-row" style="display: flex;">
-        <div class="statistieken" style='background:#ebe7e7; width: 20vw; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
+        <div class="statistieken" style='background:#ebe7e7; width: 30vw; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
           <br>
           <h3 style='text-align: center;'>Statistieken</h3>
           <hr>
-          <p style='padding: 1vw;' id='30days'><i class="fas fa-coins"></i> Maandelijkse inkomsten (DATE): </p>
-          <p style='padding: 1vw;' id='90days'><i class="fas fa-coins"></i> Jaarlijkse inkomsten (DATE): </p>
-          <p style='padding: 1vw;' id='year'><i class="fas fa-coins"></i> Totale inkomsten (DATE): </p>
-          <p style='padding: 1vw;' id='total'><i class="fas fa-coins"></i> Totale inkomsten (DATE): </p>
+          <p style='padding: 1vw;' id='30days'><i class="fas fa-coins"></i></p>
+          <p style='padding: 1vw;' id='90days'><i class="fas fa-coins"></i></p>
+          <p style='padding: 1vw;' id='year'><i class="fas fa-coins"></i></p>
+          <p style='padding: 1vw;' id='total'><i class="fas fa-coins"></i></p>
         </div>
 
         <div class="statistieken" style='background:#ebe7e7; width: 100%; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
