--- a/home.html
+++ b/home.html
@@ -32,6 +32,7 @@
           <br>
           <h3 style='text-align: center;'>Statistieken</h3>
           <hr>
+          <p style='padding: 1vw;' id='week'><i class="fas fa-coins"></i></p>
           <p style='padding: 1vw;' id='30days'><i class="fas fa-coins"></i></p>
           <p style='padding: 1vw;' id='90days'><i class="fas fa-coins"></i></p>
           <p style='padding: 1vw;' id='year'><i class="fas fa-coins"></i></p>
